fix package locations and deprecations